--- a/assign2.tex
+++ b/assign2.tex
@@ -44,16 +44,14 @@ $=4*\frac{1}{4}(\frac{1}{2}log_2(2)+ \frac{1}{2}log_2(2))$\\
 $=1$\\
 \\
 1.b)\\
-Since the cryptosystem provides perfect secrecy, $p(x|y)=p(x)$.\\
-Then $p(M) = \frac{1}{|M|}$ (each M is equiprobable)\\
-\\
-$\sum p(M)log_2(\frac{1}{p(M)})$\\
-\tab$=\frac{1}{|M|}log_2(\frac{1}{p(M)})+\frac{1}{|M|}log_2(\frac{1}{p(M)})+...+\frac{1}{|M|}log_2(\frac{1}{p(M)})$  ($|M|$ total terms)\\
-\tab$=|M|*\frac{1}{|M|}log_2(\frac{1}{p(M)})$ \\
-\tab$=log_2(\frac{1}{p(M)})$ 
-
 $H(M|C)=\sum p(C)\sum p(M|C)log_2(\frac{1}{p(M|C)})$\\
+
+Since the cryptosystem provides perfect secrecy, $p(M|C)=p(M)$.\\
+
 $=\sum p(C)\sum p(M)log_2(\frac{1}{p(M)})$\\
+
+We know $\sum p(M)log_2(\frac{1}{p(M)})=log_2(\frac{1}{p(M)})$, when a cryptosystem provides perfect secrecy. \\
+
 $=\sum p(C)log_2(\frac{1}{p(M)})$\\
 \\
 With perfect secrecy, every M is equiprobable, so every C is equiprobable.
@@ -186,13 +184,13 @@ $(02)(b)=x(b_7x^7+...+b_1x+b_0)$\\
 $=b_7x^8+b_6x^7...+b_1x^2+b_0x)$\\
 $=b_7(x^4+x^3+x+1)+b_6x^7+...+b_1x^2+b_0x)$\\
 $d=b_6x^7+b_5x^6+b_4x^5+(b_7+b_3)x^4+(b_7+b_2)x^3+b_1x^2+(b_7+b_0)x+b_7$\\
-$d_7=b_6x^7$\\
-$d_6=b_5x^6$\\
-$d_5=b_4x^5$\\
-$d_4=(b_7\oplus b_3)x^4$\\
-$d_3=(b_7\oplus b_2)x^3$\\
-$d_2=b_1x^2$\\
-$d_1=(b_7\oplus b_0)x$\\
+$d_7=b_6$\\
+$d_6=b_5$\\
+$d_5=b_4$\\
+$d_4=b_7\oplus b_3$\\
+$d_3=b_7\oplus b_2$\\
+$d_2=b_1$\\
+$d_1=b_7\oplus b_0$\\
 $d_0=b_7$\\
 \\
 b.iii)\\
