--- a/assign2.tex
+++ b/assign2.tex
@@ -1,6 +1,7 @@
 \documentclass{assignment}
 \usepackage[normalem]{ulem}
 \usepackage{amsfonts}
+\usepackage{ amssymb }
 \usepackage{amsmath}
 \usepackage{intcalc}
 \coursetitle{Introduction to Cryptography}
@@ -118,8 +119,14 @@ $\equiv ay^4+by^3+cy^2+dy$\\
 $\equiv by^3+cy^2+dy+a \pmod {y^4+1}$ \tab (since $y^4\equiv 1 \pmod {y^4+1}$)\\
 \\
 d.ii)\\
-Since $1\equiv y^4 \pmod {y^4+1}$,\\
-$y^i\equiv y^iy^4\equiv y^{i+4}\equiv y^j \pmod {y^4+1}$ where $j\equiv i+4\equiv i \pmod 4$ and $0\leq j \leq 3$.\\
+For any $i \geq 0$, we can rewrite $y^i$ as follows:\\
+\\
+$y^i\equiv y^{j+4m}\pmod {y^4+1}$ where $j,m\in \mathbb{Z}$, $0\leq j \leq 3$, and $m = \lfloor\frac{i}{4}\rfloor$\\
+\\
+Note: $i=j+4m \iff i-4m=j \iff j=i \pmod 4$\\
+\\
+Then $y^i\equiv y^{j+4m} \equiv y^j(y^4)^m\equiv y^j \pmod {y^4+1}$ \tab (since $y^4\equiv 1\pmod {y^4+1}$)\\
+Therefore, $y^i\equiv y^j \pmod {y^4+1}$ where $j\equiv i \pmod 4$ and $0\leq j \leq 3$.\\
 \\
 d.iii)\\
 Let $b=ay^3+by^2+cy+d$ represent any 4-byte vector as polynomial.\\
@@ -182,12 +189,6 @@ $d_3=b_7+b_2$\\
 $d_2=b_1$\\
 $d_1=b_7+b_0$\\
 $d_0=b_7$\\
-\\
-\\
-\\
-\\
-\\
-\\
 \\
 \\
 \\
@@ -283,6 +284,7 @@ The error happens before any encryption takes place, so the entire plaintext wou
 \\
 \end{answer}
 \end{problem}
+
 
 \end{problemlist}
 \end{document}
